{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 41,
  "lineage": "96789fdf-0a31-e1b3-a95d-839bcef159a5",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "grafana_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkInterfaces/grafana-nic",
            "internal_domain_name_suffix": "wpwlag5tdmouncqha3jshprurg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/publicIPAddresses/grafana-pip",
                "subnet_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/grafana-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "grafana-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "cicd-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_public_ip.grafana_pip",
            "module.networking.azurerm_subnet.grafana_subnet",
            "module.networking.azurerm_virtual_network.cicd_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/publicIPAddresses/cicd-pip",
                "subnet_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/cicd-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-16-24-DC",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "cicd-rg",
            "virtual_machine_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Compute/virtualMachines/jenkins-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_public_ip.cicd_pip",
            "module.networking.azurerm_subnet.cicd_subnet",
            "module.networking.azurerm_virtual_network.cicd_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cicd_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkSecurityGroups/cicd-nsg",
            "location": "eastus",
            "name": "cicd-nsg",
            "resource_group_name": "cicd-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-181.50.20.145-32",
                "priority": 123,
                "protocol": "Tcp",
                "source_address_prefix": "181.50.20.145/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-181.71.139.122-32",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "181.71.139.122/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-191.91.80.101-32",
                "priority": 124,
                "protocol": "Tcp",
                "source_address_prefix": "191.91.80.101/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-3.89.142.113-32",
                "priority": 121,
                "protocol": "Tcp",
                "source_address_prefix": "3.89.142.113/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-38.156.230.172-32",
                "priority": 122,
                "protocol": "Tcp",
                "source_address_prefix": "38.156.230.172/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-jenkins-181.50.20.145-32",
                "priority": 133,
                "protocol": "Tcp",
                "source_address_prefix": "181.50.20.145/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-jenkins-181.71.139.122-32",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "181.71.139.122/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-jenkins-191.91.80.101-32",
                "priority": 134,
                "protocol": "Tcp",
                "source_address_prefix": "191.91.80.101/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-jenkins-3.89.142.113-32",
                "priority": 131,
                "protocol": "Tcp",
                "source_address_prefix": "3.89.142.113/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-jenkins-38.156.230.172-32",
                "priority": 132,
                "protocol": "Tcp",
                "source_address_prefix": "38.156.230.172/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "cicd",
              "Project": "jenkins"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "grafana_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkSecurityGroups/grafana-nsg",
            "location": "eastus",
            "name": "grafana-nsg",
            "resource_group_name": "cicd-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-181.50.20.145-32",
                "priority": 123,
                "protocol": "Tcp",
                "source_address_prefix": "181.50.20.145/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-181.71.139.122-32",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "181.71.139.122/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-191.91.80.101-32",
                "priority": 124,
                "protocol": "Tcp",
                "source_address_prefix": "191.91.80.101/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-3.89.142.113-32",
                "priority": 121,
                "protocol": "Tcp",
                "source_address_prefix": "3.89.142.113/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-38.156.230.172-32",
                "priority": 122,
                "protocol": "Tcp",
                "source_address_prefix": "38.156.230.172/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana-181.50.20.145-32",
                "priority": 133,
                "protocol": "Tcp",
                "source_address_prefix": "181.50.20.145/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana-181.71.139.122-32",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "181.71.139.122/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana-191.91.80.101-32",
                "priority": 134,
                "protocol": "Tcp",
                "source_address_prefix": "191.91.80.101/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana-3.89.142.113-32",
                "priority": 131,
                "protocol": "Tcp",
                "source_address_prefix": "3.89.142.113/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-grafana-38.156.230.172-32",
                "priority": 132,
                "protocol": "Tcp",
                "source_address_prefix": "38.156.230.172/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "cicd",
              "Project": "jenkins"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cicd_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/publicIPAddresses/cicd-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.222.214",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "cicd-pip",
            "resource_group_name": "cicd-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "cicd",
              "Project": "jenkins"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "grafana_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/publicIPAddresses/grafana-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.18.95",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "grafana-pip",
            "resource_group_name": "cicd-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "cicd",
              "Project": "jenkins"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cicd_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/cicd-subnet",
            "name": "cicd-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cicd-rg",
            "virtual_network_name": "cicd-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.cicd_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grafana_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/grafana-subnet",
            "name": "grafana-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cicd-rg",
            "virtual_network_name": "cicd-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_virtual_network.cicd_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "grafana_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/grafana-subnet",
            "network_security_group_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkSecurityGroups/grafana-nsg",
            "subnet_id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/grafana-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.azurerm_network_security_group.grafana_nsg",
            "module.networking.azurerm_subnet.grafana_subnet",
            "module.networking.azurerm_virtual_network.cicd_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cicd_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1bb0ecb3-1bf3-461d-8a07-075323be348e",
            "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet",
            "location": "eastus",
            "name": "cicd-vnet",
            "resource_group_name": "cicd-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/virtualNetworks/cicd-vnet/subnets/cicd-subnet",
                "name": "cicd-subnet",
                "security_group": "/subscriptions/327adb70-c43a-41d1-8665-4ccbfcc3cc11/resourceGroups/cicd-rg/providers/Microsoft.Network/networkSecurityGroups/cicd-nsg"
              }
            ],
            "tags": {
              "Environment": "cicd",
              "Project": "jenkins"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}